<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view_fragment_tutorial_shoot"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:weightSum="10"
        android:layout_weight="7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:paddingTop="2dp"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/hold_the_phone_in_upright_position"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:gravity="center"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/tutorial_shoot_hand_movement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/handdirection"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/left_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_weight="1"
            android:src="@drawable/chevronleft" />

        <TextSwitcher
            android:id="@+id/tutorial_shoot_types"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textAlignment="center"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <ImageButton
            android:id="@+id/right_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_weight="1.3"
            android:src="@drawable/chevronright" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/medium_slow_fast_tells_the_time_delay_between_dribble_and_shoot"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0.7"
        android:text="@string/tutorialvibration"/>

    <Button
        android:id="@+id/tutorial_shoot_lets_try"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:text="@string/let_s_try"/>

</LinearLayout>